# HdCamera

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wt/wtcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/librtmp/: rtmp.c
app/src/main/cpp/libyuv/source/librtmp/: rtmp.c
app/src/main/java/com/wt/wtcamera/: FlowCameraActivity.kt  LuminosityAnalyzer.kt  MainActivity.kt  MenuAdapter.java
app/src/main/res/drawable/: bg_back.xml
app/src/main/res/layout/: activity_flow_camera.xml  activity_main.xml  list_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wt/wtcamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hdcamera/: build.gradle
hdcamera/src/androidTest/java/com/hd/hdcamera/: ExampleInstrumentedTest.kt
hdcamera/src/main/: AndroidManifest.xml
hdcamera/src/main/assets/models/ocr_v1_for_cpu/: ch_ppocr_mobile_v1.1_rec_quant_opt.nb
hdcamera/src/main/cpp/: CMakeLists.txt  ImageUtils.cpp  VideoChannel.cpp  native-lib.cpp  native.cpp
hdcamera/src/main/cpp/librtmp/: log.c  log.h  rtmp.c
hdcamera/src/main/java/com/hd/hdcamera/imageanalysis/: LuminosityAnalyzer.kt  (+1 more)
hdcamera/src/main/res/layout/: camera_act.xml  common_ocr_act.xml  ocr_idcard_act.xml  rtmp_push_act.xml
hdcamera/src/main/res/values/: strings.xml  themes.xml
hdcamera/src/main/res/xml/: file_paths.xml
hdcamera/src/test/java/com/hd/hdcamera/: ExampleUnitTest.kt
(+64 files in other folders)
